# agent-guard

./: .gitignore  .goreleaser.yaml  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  go.mod  go.sum
.github/workflows/: ci.yaml  release.yaml
api/: audit.go  jsonrpc.go  types.go
cmd/agentguard/: main.go
cmd/agentguard/cli/: check.go  dashboard.go  httpproxy.go  proxy.go  root.go  serve.go  version.go
configs/: default.yaml  permissive.yaml
configs/examples/: full.yaml
internal/approval/: queue.go  queue_test.go  types.go
internal/audit/: store.go  writer.go  writer_test.go
internal/config/: config.go  config_test.go  defaults.go
internal/dashboard/: handlers.go  handlers_test.go  server.go  templates.go
internal/filter/: audit.go  builder.go  chain.go  chain_test.go  context.go  filter.go  outbound_parse.go  parse.go  policy.go  ratelimit.go  ratelimit_test.go  secret.go  secret_test.go
internal/jsonrpc/: builder.go  parser.go  parser_test.go
internal/policy/: engine.go  loader.go  opa.go  opa_test.go  types.go  yaml.go  yaml_test.go
internal/proxy/http/: proxy.go  proxy_test.go
internal/proxy/stdio/: process.go  proxy.go
sdk/python/: README.md  pyproject.toml
sdk/python/src/agentguard/: __init__.py  client.py  crewai.py  decorator.py  langchain.py
sdk/python/tests/: test_client.py  test_decorator.py
testdata/mock_server/: echo_server.go
testdata/policies/: example.rego
