[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "Python SDK for AgentGuard — firewall and audit layer for AI agents"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    {name = "AgentGuard Contributors"},
]
keywords = ["ai", "agents", "security", "firewall", "mcp", "langchain", "crewai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.1.0"]
crewai = ["crewai>=0.1.0"]
all = ["langchain-core>=0.1.0", "crewai>=0.1.0"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21", "httpx>=0.24.0", "respx>=0.20"]

[project.urls]
Homepage = "https://github.com/tkingovr/agent-guard"
Repository = "https://github.com/tkingovr/agent-guard"
Issues = "https://github.com/tkingovr/agent-guard/issues"

[tool.setuptools.packages.find]
where = ["src"]
